kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-gpu-deployment
  namespace: user-jonasmorin
spec:
  ports:
  #- name: http-llm-gpu-deployment
  - port: 8000
    protocol: TCP
    targetPort: 8000
  # The label selector should match the deployment labels & it is useful for prefix caching feature
  selector:
    app: llm-gpu-deployment
  sessionAffinity: None
  type: ClusterIP
